--- a/slides/src/index.css
+++ b/slides/src/index.css
@@ -3,5 +3,38 @@
 @import "../node_modules/reveal.js/plugin/highlight/monokai.css";
 
 .reveal {
-  font-size: 32px;
+  font-size: 28px;
+}
+
+.reveal blockquote {
+  background-color: rgb(255, 255, 160);
+}
+
+strong {
+  background-color: yellow;
+}
+
+code {
+  background-color: lightgray;
+}
+
+.reveal ul ul {
+  font-size: 20px;
+  padding-left: 20px;
+  margin-left: 20px;
+}
+
+/* Add top margin before list items */
+.reveal ul li {
+  margin-top: 15px;
+}
+
+/* No top margin before list items in nested lists */
+.reveal ul ul li {
+  margin-top: 0;
+}
+
+/* No top margin before first list item */
+.reveal ul li:first-of-type {
+  margin-top: 0;
 }
